macros/tests/entry/fail/unexpected_types.stderr
error: Expected string literal
 --> tests/entry/fail/unexpected_types.rs:4:15
  |
4 | #[entry(crate(b"bytes"), fake = true)]
  |               ^^^^^^^^

error: Unexpected argument `fake`
 --> tests/entry/fail/unexpected_types.rs:4:26
  |
4 | #[entry(crate(b"bytes"), fake = true)]
  |                          ^^^^^^^^^^^
